1.4.0 调整了插件处理文本的逻辑